# cpp_project_template

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  README.md  appveyor.yml  codecov.yml  config.cmake  setup.py  version.cmake
cmake/: ProjectGlobalMacros.cmake  run-clang-tidy.py.in
docs/doxygen/source/: doxyfile.conf
docs/sphinx/source/: conf.py
includes/: cppproject.h  project.h
src/: CMakeLists.txt  Main.cpp  config.h.cmake  cppproject.cc  main.cc  project.cc
src/projectlib/: CMakeLists.txt
src/projectlib/includes/: project.h
src/projectlib/src/: project.cc
src/projectlib/test/: CMakeLists.txt  test1.cc
src/projectrun/: CMakeLists.txt
src/projectrun/src/: main.cc
test/: CMakeLists.txt  test1.cc
